--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.ojdbc8.jar=C:\\Program Files\\Java\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc8.jar}
+    ${file.reference.ojdbc8.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
